# pdflow

./: .gitignore  README.md  pydoc-markdown.yml  pyproject.toml
docs/api/: index.html  pdflow.html  search.js
src/pdflow/: __init__.py  file_extractions.py
src/pdflow/base_funcs/: __init__.py  file_funcs.py  image_funcs.py  qr_funcs.py
src/pdflow/document_analyzer/: __init__.py  base.py  default_models.py  document_analyzer.py
src/pdflow/segmentation/: __init__.py  model.py
tests/: itest.py  test_azure.py  test_extraction.py  test_pdflow.py
