[project]
name = "pdflow"
version = "0.1.1"
description = "pdflow is a libarary to help you work with documents."
readme = "README.md"
authors = [
    { name = "Ernesto", email = "ernesto@caoslabs.com" }
]
requires-python = ">=3.9"

dependencies = [
    "azure-ai-formrecognizer>=3.3.0",
    "azure-ai-ml>=1.25.0",
    "ipykernel>=6.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pydantic-ai>=0.0.24",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "pyzbar>=0.1.9",
    "supervision>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.291",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "pdoc>=14.0.0",
]
ml = [
    "ultralytics>=8.0.196",
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=pdflow"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 88
target-version = "py39"

[tool.hatch.build.targets.wheel]
packages = ["src/pdflow"]

[tool.hatch.build]
artifacts = [
    "src/pdflow/segmentation/models/*.pt"
]
